ACLOCAL_AMFLAGS		= -I m4 --install

MAINTAINERCLEANFILES	=			\
			Makefile.in		\
			aclocal.m4		\
			config.guess		\
			config.h.in		\
			config.sub		\
			configure		\
			depcomp			\
			install-sh		\
			ltmain.sh		\
			missing			\
			mkinstalldirs

include %D%/src/Makefile.am
include %D%/man/Makefile.am
